fix(pickers): Fix z-index

--- a/src/styles/_calendar.scss
+++ b/src/styles/_calendar.scss
@@ -1,5 +1,6 @@
 .calendar {
   position: relative;
+  display: inline-block;
 
   &__body {
     position: absolute;
