--- a/src/styles/_timepicker.scss
+++ b/src/styles/_timepicker.scss
@@ -1,4 +1,6 @@
 .timepicker {
+  position: relative;
+  display: inline-block;
 
   &__input-text {
     outline: none;
@@ -25,6 +27,7 @@
     background: #FFFFFF;
     border: 1px solid #CCCCCC;
     box-shadow: 0 2px 5px rgba(0,0,0,.26);
+    z-index: 100;
 
     &-header {
       background: $indigo;
